--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       color: white;
       border: 5px solid gold;
       display:inline-flex;                              
-      flex-direction: column;
+      flex-direction: column;      /* $$$YATAYDAM DIKEYE ALAN BU.*/
        
       
     }
@@ -27,7 +27,7 @@ children of the .container class.
     */
 
     .container > * {                /*    !!!!!!!!!!!!!!!!!!!!  */
-      flex-basis: 100px;
+      flex-basis: 100px;            /*$$$x eksenini 100 px olarak dikdortgenler. */
     }
 
     .red {background-color: #eb4d4b;}
